--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,44 +1,46 @@
 .flex {
-    display: flex;
+  display: flex;
 }
 .iteam-center {
-    align-items: center;
+  align-items: center;
 }
 .justify-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .btn {
-    padding: 0.8rem 2rem;
-    font-size: 1rem;
-    font-weight: 600px;
-    border: 2px solid transparent;
-    outline: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: all 0.3s ease;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  font-weight: 600px;
+  border: 2px solid transparent;
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+#contact {
+  text-decoration: none;
 }
 .btn-primary {
-    background: var(--primary);
-    color: var(--secondary);
+  background: var(--primary);
+  color: var(--secondary);
 }
 .btn-primary:hover {
-    background: transparent;
-    border-color: var(--secondary);
-    color: var(--secondary);
+  background: transparent;
+  border-color: var(--secondary);
+  color: var(--secondary);
 }
-.btn-secondary{
-    background: transparent;
-    color: var(--primary);
-    border-color: var(--primary);
-    
+.btn-secondary {
+  background: transparent;
+  color: var(--primary);
+  border-color: var(--primary);
 }
-.btn-secondary:hover{
-    background: var(--primary);
-    color: var(--secondary);
+.btn-secondary:hover {
+  background: var(--primary);
+  color: var(--secondary);
 }
-.flex-1{
-    flex:1;
+.flex-1 {
+  flex: 1;
 }
-.justify-center{
-    justify-content: center;
+.justify-center {
+  justify-content: center;
 }
