--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,8 @@ footer .copyright {
   top: 0;
   left: 0;
   z-index: 1001;
-  background: var(--light);
+  background: var(--dark);
+  color: var(--light);
   width: 100%;
   height: 100%;
   padding: 2rem;
@@ -469,6 +470,7 @@ footer .copyright {
 }
 .times img {
   width: 30px;
+  background: var(--light);
 }
 .mobile-nav ul {
   list-style-type: none;
@@ -477,4 +479,19 @@ footer .copyright {
   color: var(--secondary);
   text-decoration: none;
   font-size: 2rem;
+  font-weight: bold;
+}
+@media (max-width: 1024px) {
+  header #main-nav {
+    display: none;
+  }
+  .hero .left img {
+    width: 260px;
+  }
+  .hero .right h1 {
+    font-size: 3rem;
+  }
+  .hero {
+    padding-top: 10rem;
+  }
 }
